--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@ body{
     padding: 0;
     margin: 0;
     overflow-x: hidden;
+    position: relative;
+    height: 100%;
 }
 
 .hijacker{
@@ -21,18 +23,54 @@ body{
 }
 #player{
     width: 500px;
-    margin: 20px auto;
+    margin: 20px auto 150px;
     height: 400px;
     display: none;
+    position: relative;
+    background: black;
+    transition: all .3s;
+    -webkit-transition: all .3s ;
+    -moz-transition: all .3s;
+
+    transition-delay: 0;
+    -moz-transition-delay: 0;
+    -webkit-transition-delay: 0;
+
+    box-shadow: 0 10px 10px -10px rgba(23,23,23, .4);
+    -webkit-box-shadow: 0 10px 10px -10px rgba(23,23,23, .4);
+    -moz-box-shadow: 0 10px 10px -10px rgba(23,23,23, .4);
 }
+
+
+    #player iframe{
+        width: 100%;
+        height: 100%;
+        border: 0;
+    }
+
+    #player h1{
+        color: #fff;
+        display: block;
+        text-align: center;
+        font: normal normal 23px/36px Cambria, Georgia, "Times New Roman", Times, serif;
+        position: relative;
+        padding: 0;
+        margin: 0;
+        transition: all .3s;
+        -webkit-transition: all .3s;
+        -moz-transition: all .3s;
+    }
 
 
 .fullscreen #player{
     width: 100%;
-    height: 100%;
+    height: 95%;
     position: relative;
-    background: black;
     margin: 0 0 50px;
+    transition-delay: .2s;
+    -moz-transition-delay: .2s;
+    -webkit-transition-delay: .2s;
+    padding-bottom: 5%;
 }
 
     .fullscreen #player iframe{
@@ -41,13 +79,32 @@ body{
         position: relative;
     }
 
+    .fullscreen #player h1{
+        height: 0px;
+        line-height: 0px;
+        overflow: hidden;
+        transition: all .3s;
+        -webkit-transition: all .3s;
+        -moz-transition: all .3s;
+    }
+
+        .fullscreen #player:after{
+            color: #fff;
+            display: block;
+            text-align: center;
+            font: normal normal 23px/36px Cambria, Georgia, "Times New Roman", Times, serif;
+            position: relative;
+            content: "Thank you for entering fullscreen!";
+            opacity: .5;
+        }
+
 </style>
 
 </head>
 
 <body>
 
-<div id=player></div>
+<div id=player><h1>Now go fullscreen</h1></div>
 <div id=list></div>
 
 
@@ -64,22 +121,21 @@ function handle_youtube_load(data){
         });
         return i < 11;
     })
-}
+};
 
 $(window).bind('fullscreen', function(ev, is_fullscreen){
     $('body').toggleClass('fullscreen', is_fullscreen);
-})
+});
 
 function make_thumbnail(data){
     $('<img />', {
         "src": data.thumb,
         "class": "hijacker",
         "click": function(ev){
-            $('#player').empty().append($('<iframe />', {
+            $('#player').children('iframe').remove().end().append($('<iframe />', {
                 'src': data.iframe_url,
-                'height': '100%',
-                'width': '100%',
-                'position': 'relative'
+                'position': 'relative',
+                'frameBorder': 0
             })).slideDown();
             window.location.hash = 'player';
             window.scrollTo(0, 0);
@@ -88,9 +144,7 @@ function make_thumbnail(data){
 }
 
 $(function(){
-
-    $('<script/>').attr('src', 'http://gdata.youtube.com/feeds/api/standardfeeds/most_popular?time=today&format=5&alt=json&callback=handle_youtube_load').appendTo('body');
-
+    $('<script/>').attr('src', 'http://gdata.youtube.com/feeds/api/standardfeeds/most_popular?time=this_week&format=5&alt=json&callback=handle_youtube_load').appendTo('body');
 })
 
 </script>
