--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@ footer{
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.js"></script>
 <script src="http://hdragomir.com/jquery.onfullscreen-1.0.0.js"></script>
+<script src="http://hdragomir.com/analytics.js"></script>
 <script>
 
 function handle_youtube_load(data){
