--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Fullscreen event with jQuery demo</title>
 
     <meta property="og:title" content="Fullscreen event with jQuery demo"/>
-    <meta property="og:type" content="application"/>
-    <meta property="og:site_name" content="hdragomir.com"/>
 
 <style>
 
@@ -191,7 +189,7 @@ footer{
         </div>
 
         <div>
-            <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Flabs.hdragomir.com%2Fonfullscreen-demo&amp;layout=standard&amp;show_faces=false&amp;width=450&amp;action=like&amp;font=lucida+grande&amp;colorscheme=light&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:35px;" allowTransparency="true"></iframe>
+            <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Flabs.hdragomir.com%2Fonfullscreen-demo%2F&amp;layout=standard&amp;show_faces=false&amp;width=450&amp;action=like&amp;colorscheme=light&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:35px;" allowTransparency="true"></iframe>
         </div>
 
         <aside>
