changed Go Fullscreen cta

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ footer{
 
 <body>
 
-<div id=player><h1>Now go fullscreen</h1></div>
+<div id=player><h1>Now go fullscreen with your browser (F11)</h1></div>
 <div class=outer-list>
     <div>
         <h1>Fullscreen event with jQuery | Demo using youtube's &quot;most popular this week&quot;</h1>
